--- a/Expanding Cards/index.html
+++ b/Expanding Cards/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/style.css">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Css/style.css" />
+    <title>Expanding Cards</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <div class="panel active " style="
+          background-image: url('https://images.pexels.com/photos/1366630/pexels-photo-1366630.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        ">
+            <h3>Sunflower</h3>
+        </div>
+        <div class="panel " style="
+          background-image: url('https://images.pexels.com/photos/1316484/pexels-photo-1316484.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        ">
+            <h3>Yellow Flame</h3>
+        </div>
+        <div class="panel " style="
+          background-image: url('https://images.pexels.com/photos/1591382/pexels-photo-1591382.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        ">
+            <h3>Golden Gate Bridge</h3>
+        </div>
+        <div class="panel " style="
+          background-image: url('https://images.pexels.com/photos/2362002/pexels-photo-2362002.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        ">
+            <h3>Walt Disney Castle</h3>
+        </div>
+        <div class="panel " style="
+          background-image: url('https://images.pexels.com/photos/3617500/pexels-photo-3617500.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        ">
+            <h3>Aurora</h3>
+        </div>
+    </div>
+
     <script src="./Js/script.js"></script>
 </body>
+
 </html>
